# eternity_rust

./: Cargo.toml  README.md  genetic_alogithm_process.md  todo.md
pieces_set/: pieces_03x03.txt  pieces_04x03.txt  pieces_04x04.txt  pieces_05x03.txt  pieces_05x04.txt  pieces_16x16.txt
pieces_sets/: pieces_08x08.txt  pieces_12x12.txt
src/: main.rs  population.rs  puzzle.rs
